fix: overflow issue fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,4 +38,10 @@ body {
       radial-gradient(at 0% 1%, hsla(152, 75%, 80%, 0.4) 0px, transparent 50%),
       radial-gradient(at 30% 40%, hsla(32, 98%, 83%, 0.3) 0px, transparent 30%);
   }
+
+  .truncate_3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  }
 }
